Fixed alignment to better match centered layout

--- a/src/index.css
+++ b/src/index.css
@@ -141,11 +141,13 @@ main section {
 }
 
 .hero {
+  display: flex;
+  justify-content: center;
+  align-content: center;
   height: 30vh;
   width: auto;
   margin: 0 auto;
   background: rgba(0, 0, 0, 0.4);
-  padding: 10vh 20vw;
 }
 .hero .avatar {
   height: 12em;
@@ -255,7 +257,6 @@ main section {
 }
 
 .main_nav {
-  width: 100%;
   height: 100%;
   padding: 0;
   margin: 0;
@@ -265,11 +266,15 @@ main section {
   text-align: center;
   justify-content: center;
   align-content: center;
-  aspect-ratio: 1.1547005;
+  height: 4em;
+  width: 4.618802em;
   margin: 0 auto;
 }
+.main_nav ul:nth-child(1) {
+  margin-left: -2em;
+}
 .main_nav ul li:nth-child(2) {
-  margin-left: 16em;
+  margin-left: 4.618802em;
 }
 .main_nav ul li:nth-child(3) {
   display: inline-block;
