--- a/src/styles/layouts/_hero.sass
+++ b/src/styles/layouts/_hero.sass
@@ -13,12 +13,14 @@
 
 
 .hero
-    
+    display: flex
+    justify-content: center
+    align-content: center
     height: 30vh
     width: auto
     margin: 0 auto
     background: rgba(0,0,0,0.4)
-    padding: 10vh 20vw
+    //padding: 10vh 20vw
 
     .avatar
         height: settings.$avatar-size
